# aiogram-dialog-bot

./: .env_example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
bot/handlers/: start.py
models/: base.py
models/migrations/: env.py
settings/: config.py  database.py
