[tool.poetry]
name = "bot"
version = "0.1.0"
description = "aiogram-dialog bot"
authors = ["HardLine89 <dmitrymakarov089@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^75.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
