[tool.poetry]
name = "bot"
version = "0.1.0"
description = "aiogram-dialog bot"
authors = ["HardLine89 <dmitrymakarov089@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^75.8.0"
aiogram-dialog = "^2.3.0"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
alembic = "^1.14.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
